Forskjellige Strings Metoder
Plus litt rydding med kode

--- a/index.html
+++ b/index.html
@@ -9,66 +9,71 @@
 
 
     <body>
+        <h1>
+            Strings Metoder
+        </h1>
+
+
         <div>
-            <h1 id="sliceText">
+            <p id="sliceText">
                 Kutt i meg slik at jeg kun beholder det siste ordet (slice)
-            </h1>
+            </p>
             <button onclick="sliceFunc()">
                 slice
             </button>
 
 
-            <h1 id="lengthText">
+            <p id="lengthText">
                 Si hvor mange bokstaver det er i teksten (lengt)
-            </h1>
+            </p>
             <button onclick="lengthFunc()">
                 lengde
             </button>
 
 
-            <h1 id="upperText">
+            <p id="upperText">
                 Gjør alt om til store bokstaver (toUpperCase)
-            </h1>
+            </p>
             <button onclick="upperFunc()">
                 STORE
             </button>
 
 
-            <h1 id="lowerText">
+            <p id="lowerText">
                 Gjør alt om til små bokstaver (toLowerCase)
-            </h1>
+            </p>
             <button onclick="lowerFunc()">
                 smol
             </button>
 
 
-            <h1 id="replaceText">
+            <p id="replaceText">
                 Bytt ut ordet Pompel med ordet Pilt (replace)
-            </h1>
+            </p>
             <button onclick="replaceFunc()">
                 bytt
             </button>
 
 
-            <h1 id="subText">
+            <p id="subText">
                 hent ut ordet amøbe fra teksten (substring)
-            </h1>
+            </p>
             <button onclick="subFunc()">
                 utdrag
             </button>
 
 
-            <h1 id="indexOfText">
+            <p id="indexOfText">
                 Finn indeksen (plassen) til ordet f fantomet (indexOf)
-            </h1>
+            </p>
             <button onclick="indexOfFunc()">
                 indeks
             </button>
 
 
-            <h1 id="includeText">
+            <p id="includeText">
                 Sjekk om en tekstbit finnes i en større tekst (includes)
-            </h1>
+            </p>
             <button onclick="includeFunc()">
                 finnes 'inne' i teksten ?
             </button>
