--- a/oppgave1.html
+++ b/oppgave1.html
@@ -4,6 +4,9 @@
         <title>
             Passordsjekker 
         </title>
+
+
+        <link href="oppgave1.css" rel="stylesheet" />
     </head>
 
 
